// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`QuestionForm > renders a classic multi choice option question form 1`] = `
<div>
  <div
    class="section"
  >
    <div
      class="questionFieldContainer layoutFull"
    >
      <div
        class="label"
      >
        <span>
          Question
        </span>
      </div>
      <div
        class="content"
      >
        <div
          class="inputContainer"
        >
          <div
            class="textFieldInputContainer textFieldInputKindPrimary"
          >
            <input
              class="textfield"
              data-testid="test-question-text-textfield-textfield"
              id="question-text-textfield"
              maxlength="120"
              minlength="3"
              name="question-text-textfield"
              placeholder="Question"
              type="text"
              value="Who painted The Starry Night?"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="section"
  >
    <div
      class="questionFieldContainer layoutFull"
    >
      <div
        class="label"
      />
      <div
        class="content"
      >
        <div
          class="mediaQuestionField"
        >
          <div
            class="previewWrapper"
          >
            <div
              class="preview"
            >
              <div
                class="container"
              >
                <img
                  class="image"
                  src="https://i.pinimg.com/originals/a6/60/72/a66072b0e88258f2898a76c3f3c01041.jpg"
                />
              </div>
            </div>
            <div
              class="actions"
            >
              <div
                class="buttonInputContainer buttonInputKindDestructive buttonInputSizeSmall"
              >
                <button
                  data-testid="test-delete-media-button-button"
                  id="delete-media-button"
                  name="delete-media-button"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-trash "
                    data-icon="trash"
                    data-prefix="fas"
                    role="img"
                    viewBox="0 0 448 512"
                  >
                    <path
                      d="M136.7 5.9L128 32 32 32C14.3 32 0 46.3 0 64S14.3 96 32 96l384 0c17.7 0 32-14.3 32-32s-14.3-32-32-32l-96 0-8.7-26.1C306.9-7.2 294.7-16 280.9-16L167.1-16c-13.8 0-26 8.8-30.4 21.9zM416 144L32 144 53.1 467.1C54.7 492.4 75.7 512 101 512L347 512c25.3 0 46.3-19.6 47.9-44.9L416 144z"
                      fill="currentColor"
                    />
                  </svg>
                  <span>
                    Delete
                  </span>
                </button>
              </div>
              <div
                class="buttonInputContainer buttonInputKindCallToAction buttonInputSizeSmall"
              >
                <button
                  data-testid="test-add-media-button-button"
                  id="add-media-button"
                  name="add-media-button"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-retweet "
                    data-icon="retweet"
                    data-prefix="fas"
                    role="img"
                    viewBox="0 0 576 512"
                  >
                    <path
                      d="M118.6 41.4c-12.5-12.5-32.8-12.5-45.3 0l-64 64c-9.2 9.2-11.9 22.9-6.9 34.9S19.1 160 32 160l32 0 0 224c0 53 43 96 96 96l128 0c17.7 0 32-14.3 32-32s-14.3-32-32-32l-128 0c-17.7 0-32-14.3-32-32l0-224 32 0c12.9 0 24.6-7.8 29.6-19.8s2.2-25.7-6.9-34.9l-64-64zM457.4 470.6c12.5 12.5 32.8 12.5 45.3 0l64-64c9.2-9.2 11.9-22.9 6.9-34.9S556.9 352 544 352l-32 0 0-224c0-53-43-96-96-96L288 32c-17.7 0-32 14.3-32 32s14.3 32 32 32l128 0c17.7 0 32 14.3 32 32l0 224-32 0c-12.9 0-24.6 7.8-29.6 19.8s-2.2 25.7 6.9 34.9l64 64z"
                      fill="currentColor"
                    />
                  </svg>
                  <span>
                    Replace
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="section"
  >
    <div
      class="questionFieldContainer layoutFull"
    >
      <div
        class="label"
      >
        <span>
          Options
        </span>
        <button
          class="iconTooltipButton"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-circle-info "
            data-icon="circle-info"
            data-prefix="fas"
            role="img"
            viewBox="0 0 512 512"
          >
            <path
              d="M256 512a256 256 0 1 0 0-512 256 256 0 1 0 0 512zM224 160a32 32 0 1 1 64 0 32 32 0 1 1 -64 0zm-8 64l48 0c13.3 0 24 10.7 24 24l0 88 8 0c13.3 0 24 10.7 24 24s-10.7 24-24 24l-80 0c-13.3 0-24-10.7-24-24s10.7-24 24-24l24 0 0-64-24 0c-13.3 0-24-10.7-24-24s10.7-24 24-24z"
              fill="currentColor"
            />
          </svg>
        </button>
      </div>
      <div
        class="content"
      >
        <div
          class="optionsContainer"
        >
          <div
            class="option"
          >
            <div
              class="inputContainer"
            >
              <div
                class="textFieldInputContainer textFieldInputKindPrimary"
              >
                <input
                  class="textfield"
                  data-testid="test-multi-choice-option-0-textfield-textfield"
                  id="multi-choice-option-0-textfield"
                  name="multi-choice-option-0-textfield"
                  placeholder="Option 1"
                  type="text"
                  value="Vincent van Gogh"
                />
                <label
                  class="checkboxLabel"
                  for="multi-choice-option-0-textfield-checkbox"
                >
                  <input
                    checked=""
                    class="checkbox"
                    id="multi-choice-option-0-textfield-checkbox"
                    type="checkbox"
                  />
                  <span
                    class="checkboxIcon"
                  >
                    <svg
                      aria-hidden="true"
                      class="svg-inline--fa fa-check "
                      data-icon="check"
                      data-prefix="fas"
                      role="img"
                      viewBox="0 0 448 512"
                    >
                      <path
                        d="M434.8 70.1c14.3 10.4 17.5 30.4 7.1 44.7l-256 352c-5.5 7.6-14 12.3-23.4 13.1s-18.5-2.7-25.1-9.3l-128-128c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l101.5 101.5 234-321.7c10.4-14.3 30.4-17.5 44.7-7.1z"
                        fill="currentColor"
                      />
                    </svg>
                  </span>
                </label>
              </div>
            </div>
          </div>
          <div
            class="option"
          >
            <div
              class="inputContainer"
            >
              <div
                class="textFieldInputContainer textFieldInputKindPrimary"
              >
                <input
                  class="textfield"
                  data-testid="test-multi-choice-option-1-textfield-textfield"
                  id="multi-choice-option-1-textfield"
                  name="multi-choice-option-1-textfield"
                  placeholder="Option 2"
                  type="text"
                  value="Pablo Picasso"
                />
                <label
                  class="checkboxLabel"
                  for="multi-choice-option-1-textfield-checkbox"
                >
                  <input
                    class="checkbox"
                    id="multi-choice-option-1-textfield-checkbox"
                    type="checkbox"
                  />
                </label>
              </div>
            </div>
          </div>
          <div
            class="option"
          >
            <div
              class="inputContainer"
            >
              <div
                class="textFieldInputContainer textFieldInputKindPrimary"
              >
                <input
                  class="textfield"
                  data-testid="test-multi-choice-option-2-textfield-textfield"
                  id="multi-choice-option-2-textfield"
                  name="multi-choice-option-2-textfield"
                  placeholder="Option 3"
                  type="text"
                  value="Leonardo da Vinci"
                />
                <label
                  class="checkboxLabel"
                  for="multi-choice-option-2-textfield-checkbox"
                >
                  <input
                    class="checkbox"
                    id="multi-choice-option-2-textfield-checkbox"
                    type="checkbox"
                  />
                </label>
              </div>
            </div>
          </div>
          <div
            class="option"
          >
            <div
              class="inputContainer"
            >
              <div
                class="textFieldInputContainer textFieldInputKindPrimary"
              >
                <input
                  class="textfield"
                  data-testid="test-multi-choice-option-3-textfield-textfield"
                  id="multi-choice-option-3-textfield"
                  name="multi-choice-option-3-textfield"
                  placeholder="Option 4"
                  type="text"
                  value="Claude Monet"
                />
                <label
                  class="checkboxLabel"
                  for="multi-choice-option-3-textfield-checkbox"
                >
                  <input
                    class="checkbox"
                    id="multi-choice-option-3-textfield-checkbox"
                    type="checkbox"
                  />
                </label>
              </div>
            </div>
          </div>
          <div
            class="option"
          >
            <div
              class="inputContainer"
            >
              <div
                class="textFieldInputContainer textFieldInputKindPrimary"
              >
                <input
                  class="textfield"
                  data-testid="test-multi-choice-option-4-textfield-textfield"
                  id="multi-choice-option-4-textfield"
                  name="multi-choice-option-4-textfield"
                  placeholder="Option 5"
                  type="text"
                  value="Michelangelo"
                />
                <label
                  class="checkboxLabel"
                  for="multi-choice-option-4-textfield-checkbox"
                >
                  <input
                    class="checkbox"
                    id="multi-choice-option-4-textfield-checkbox"
                    type="checkbox"
                  />
                </label>
              </div>
            </div>
          </div>
          <div
            class="option"
          >
            <div
              class="inputContainer"
            >
              <div
                class="textFieldInputContainer textFieldInputKindPrimary"
              >
                <input
                  class="textfield"
                  data-testid="test-multi-choice-option-5-textfield-textfield"
                  id="multi-choice-option-5-textfield"
                  name="multi-choice-option-5-textfield"
                  placeholder="Option 6"
                  type="text"
                  value="Rembrandt"
                />
                <label
                  class="checkboxLabel"
                  for="multi-choice-option-5-textfield-checkbox"
                >
                  <input
                    class="checkbox"
                    id="multi-choice-option-5-textfield-checkbox"
                    type="checkbox"
                  />
                </label>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="section"
  >
    <div
      class="questionFieldContainer layoutHalf"
    >
      <div
        class="label"
      >
        <span>
          Points
        </span>
        <button
          class="iconTooltipButton"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-circle-info "
            data-icon="circle-info"
            data-prefix="fas"
            role="img"
            viewBox="0 0 512 512"
          >
            <path
              d="M256 512a256 256 0 1 0 0-512 256 256 0 1 0 0 512zM224 160a32 32 0 1 1 64 0 32 32 0 1 1 -64 0zm-8 64l48 0c13.3 0 24 10.7 24 24l0 88 8 0c13.3 0 24 10.7 24 24s-10.7 24-24 24l-80 0c-13.3 0-24-10.7-24-24s10.7-24 24-24l24 0 0-64-24 0c-13.3 0-24-10.7-24-24s10.7-24 24-24z"
              fill="currentColor"
            />
          </svg>
        </button>
      </div>
      <div
        class="content"
      >
        <div
          class="inputContainer"
        >
          <div
            class="selectInputContainer selectInputKindPrimary"
          >
            <select
              data-testid="test-points-select-select"
              id="points-select"
              name="points-select"
            >
              <option
                value="0"
              >
                Zero Points
              </option>
              <option
                value="1000"
              >
                Standard Points (1000)
              </option>
              <option
                value="2000"
              >
                Double Points (2000)
              </option>
            </select>
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-chevron-down selectIcon"
              color="black"
              data-icon="chevron-down"
              data-prefix="fas"
              role="img"
              viewBox="0 0 448 512"
            >
              <path
                d="M201.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L224 338.7 54.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z"
                fill="currentColor"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      class="questionFieldContainer layoutHalf"
    >
      <div
        class="label"
      >
        <span>
          Time Limit
        </span>
        <button
          class="iconTooltipButton"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-circle-info "
            data-icon="circle-info"
            data-prefix="fas"
            role="img"
            viewBox="0 0 512 512"
          >
            <path
              d="M256 512a256 256 0 1 0 0-512 256 256 0 1 0 0 512zM224 160a32 32 0 1 1 64 0 32 32 0 1 1 -64 0zm-8 64l48 0c13.3 0 24 10.7 24 24l0 88 8 0c13.3 0 24 10.7 24 24s-10.7 24-24 24l-80 0c-13.3 0-24-10.7-24-24s10.7-24 24-24l24 0 0-64-24 0c-13.3 0-24-10.7-24-24s10.7-24 24-24z"
              fill="currentColor"
            />
          </svg>
        </button>
      </div>
      <div
        class="content"
      >
        <div
          class="inputContainer"
        >
          <div
            class="selectInputContainer selectInputKindPrimary"
          >
            <select
              data-testid="test-duration-select-select"
              id="duration-select"
              name="duration-select"
            >
              <option
                value="5"
              >
                5 seconds
              </option>
              <option
                value="10"
              >
                10 seconds
              </option>
              <option
                value="20"
              >
                20 seconds
              </option>
              <option
                value="30"
              >
                30 seconds
              </option>
              <option
                value="45"
              >
                45 seconds
              </option>
              <option
                value="60"
              >
                1 minute
              </option>
              <option
                value="90"
              >
                1 minute 30 seconds
              </option>
              <option
                value="120"
              >
                2 minutes
              </option>
              <option
                value="180"
              >
                3 minutes
              </option>
              <option
                value="240"
              >
                4 minutes
              </option>
            </select>
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-chevron-down selectIcon"
              color="black"
              data-icon="chevron-down"
              data-prefix="fas"
              role="img"
              viewBox="0 0 448 512"
            >
              <path
                d="M201.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L224 338.7 54.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z"
                fill="currentColor"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`QuestionForm > renders a classic range question form 1`] = `
<div>
  <div
    class="section"
  >
    <div
      class="questionFieldContainer layoutFull"
    >
      <div
        class="label"
      >
        <span>
          Question
        </span>
      </div>
      <div
        class="content"
      >
        <div
          class="inputContainer"
        >
          <div
            class="textFieldInputContainer textFieldInputKindPrimary"
          >
            <input
              class="textfield"
              data-testid="test-question-text-textfield-textfield"
              id="question-text-textfield"
              maxlength="120"
              minlength="3"
              name="question-text-textfield"
              placeholder="Question"
              type="text"
              value="What percentage of the earth's surface is covered by water?"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="section"
  >
    <div
      class="questionFieldContainer layoutFull"
    >
      <div
        class="label"
      />
      <div
        class="content"
      >
        <div
          class="mediaQuestionField"
        >
          <div
            class="previewWrapper"
          >
            <div
              class="preview"
            >
              <div
                class="container"
              >
                <img
                  class="image"
                  src="https://editalconcursosbrasil.com.br/wp-content/uploads/2022/12/planeta-terra-scaled.jpg"
                />
              </div>
            </div>
            <div
              class="actions"
            >
              <div
                class="buttonInputContainer buttonInputKindDestructive buttonInputSizeSmall"
              >
                <button
                  data-testid="test-delete-media-button-button"
                  id="delete-media-button"
                  name="delete-media-button"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-trash "
                    data-icon="trash"
                    data-prefix="fas"
                    role="img"
                    viewBox="0 0 448 512"
                  >
                    <path
                      d="M136.7 5.9L128 32 32 32C14.3 32 0 46.3 0 64S14.3 96 32 96l384 0c17.7 0 32-14.3 32-32s-14.3-32-32-32l-96 0-8.7-26.1C306.9-7.2 294.7-16 280.9-16L167.1-16c-13.8 0-26 8.8-30.4 21.9zM416 144L32 144 53.1 467.1C54.7 492.4 75.7 512 101 512L347 512c25.3 0 46.3-19.6 47.9-44.9L416 144z"
                      fill="currentColor"
                    />
                  </svg>
                  <span>
                    Delete
                  </span>
                </button>
              </div>
              <div
                class="buttonInputContainer buttonInputKindCallToAction buttonInputSizeSmall"
              >
                <button
                  data-testid="test-add-media-button-button"
                  id="add-media-button"
                  name="add-media-button"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-retweet "
                    data-icon="retweet"
                    data-prefix="fas"
                    role="img"
                    viewBox="0 0 576 512"
                  >
                    <path
                      d="M118.6 41.4c-12.5-12.5-32.8-12.5-45.3 0l-64 64c-9.2 9.2-11.9 22.9-6.9 34.9S19.1 160 32 160l32 0 0 224c0 53 43 96 96 96l128 0c17.7 0 32-14.3 32-32s-14.3-32-32-32l-128 0c-17.7 0-32-14.3-32-32l0-224 32 0c12.9 0 24.6-7.8 29.6-19.8s2.2-25.7-6.9-34.9l-64-64zM457.4 470.6c12.5 12.5 32.8 12.5 45.3 0l64-64c9.2-9.2 11.9-22.9 6.9-34.9S556.9 352 544 352l-32 0 0-224c0-53-43-96-96-96L288 32c-17.7 0-32 14.3-32 32s14.3 32 32 32l128 0c17.7 0 32 14.3 32 32l0 224-32 0c-12.9 0-24.6 7.8-29.6 19.8s-2.2 25.7 6.9 34.9l64 64z"
                      fill="currentColor"
                    />
                  </svg>
                  <span>
                    Replace
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="section"
  >
    <div
      class="questionFieldContainer layoutHalf"
    >
      <div
        class="label"
      >
        <span>
          Min
        </span>
        <button
          class="iconTooltipButton"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-circle-info "
            data-icon="circle-info"
            data-prefix="fas"
            role="img"
            viewBox="0 0 512 512"
          >
            <path
              d="M256 512a256 256 0 1 0 0-512 256 256 0 1 0 0 512zM224 160a32 32 0 1 1 64 0 32 32 0 1 1 -64 0zm-8 64l48 0c13.3 0 24 10.7 24 24l0 88 8 0c13.3 0 24 10.7 24 24s-10.7 24-24 24l-80 0c-13.3 0-24-10.7-24-24s10.7-24 24-24l24 0 0-64-24 0c-13.3 0-24-10.7-24-24s10.7-24 24-24z"
              fill="currentColor"
            />
          </svg>
        </button>
      </div>
      <div
        class="content"
      >
        <div
          class="inputContainer"
        >
          <div
            class="textFieldInputContainer textFieldInputKindPrimary"
          >
            <input
              class="textfield"
              data-testid="test-range-min-textfield-textfield"
              id="range-min-textfield"
              name="range-min-textfield"
              placeholder="Min"
              type="number"
              value="0"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="questionFieldContainer layoutHalf"
    >
      <div
        class="label"
      >
        <span>
          Max
        </span>
        <button
          class="iconTooltipButton"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-circle-info "
            data-icon="circle-info"
            data-prefix="fas"
            role="img"
            viewBox="0 0 512 512"
          >
            <path
              d="M256 512a256 256 0 1 0 0-512 256 256 0 1 0 0 512zM224 160a32 32 0 1 1 64 0 32 32 0 1 1 -64 0zm-8 64l48 0c13.3 0 24 10.7 24 24l0 88 8 0c13.3 0 24 10.7 24 24s-10.7 24-24 24l-80 0c-13.3 0-24-10.7-24-24s10.7-24 24-24l24 0 0-64-24 0c-13.3 0-24-10.7-24-24s10.7-24 24-24z"
              fill="currentColor"
            />
          </svg>
        </button>
      </div>
      <div
        class="content"
      >
        <div
          class="inputContainer"
        >
          <div
            class="textFieldInputContainer textFieldInputKindPrimary"
          >
            <input
              class="textfield"
              data-testid="test-range-max-textfield-textfield"
              id="range-max-textfield"
              name="range-max-textfield"
              placeholder="Max"
              type="number"
              value="100"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="questionFieldContainer layoutHalf"
    >
      <div
        class="label"
      >
        <span>
          Correct
        </span>
        <button
          class="iconTooltipButton"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-circle-info "
            data-icon="circle-info"
            data-prefix="fas"
            role="img"
            viewBox="0 0 512 512"
          >
            <path
              d="M256 512a256 256 0 1 0 0-512 256 256 0 1 0 0 512zM224 160a32 32 0 1 1 64 0 32 32 0 1 1 -64 0zm-8 64l48 0c13.3 0 24 10.7 24 24l0 88 8 0c13.3 0 24 10.7 24 24s-10.7 24-24 24l-80 0c-13.3 0-24-10.7-24-24s10.7-24 24-24l24 0 0-64-24 0c-13.3 0-24-10.7-24-24s10.7-24 24-24z"
              fill="currentColor"
            />
          </svg>
        </button>
      </div>
      <div
        class="content"
      >
        <div
          class="inputContainer"
        >
          <div
            class="textFieldInputContainer textFieldInputKindPrimary"
          >
            <input
              class="textfield"
              data-testid="test-range-correct-textfield-textfield"
              id="range-correct-textfield"
              max="100"
              min="0"
              name="range-correct-textfield"
              placeholder=""
              type="number"
              value="71"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="questionFieldContainer layoutHalf"
    >
      <div
        class="label"
      >
        <span>
          Margin
        </span>
        <button
          class="iconTooltipButton"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-circle-info "
            data-icon="circle-info"
            data-prefix="fas"
            role="img"
            viewBox="0 0 512 512"
          >
            <path
              d="M256 512a256 256 0 1 0 0-512 256 256 0 1 0 0 512zM224 160a32 32 0 1 1 64 0 32 32 0 1 1 -64 0zm-8 64l48 0c13.3 0 24 10.7 24 24l0 88 8 0c13.3 0 24 10.7 24 24s-10.7 24-24 24l-80 0c-13.3 0-24-10.7-24-24s10.7-24 24-24l24 0 0-64-24 0c-13.3 0-24-10.7-24-24s10.7-24 24-24z"
              fill="currentColor"
            />
          </svg>
        </button>
      </div>
      <div
        class="content"
      >
        <div
          class="inputContainer"
        >
          <div
            class="selectInputContainer selectInputKindPrimary"
          >
            <select
              data-testid="test-range-margin-select-select"
              id="range-margin-select"
              name="range-margin-select"
            >
              <option
                value="NONE"
              >
                None
              </option>
              <option
                value="LOW"
              >
                Low
              </option>
              <option
                value="MEDIUM"
              >
                Medium
              </option>
              <option
                value="HIGH"
              >
                High
              </option>
              <option
                value="MAXIMUM"
              >
                Maximum
              </option>
            </select>
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-chevron-down selectIcon"
              color="black"
              data-icon="chevron-down"
              data-prefix="fas"
              role="img"
              viewBox="0 0 448 512"
            >
              <path
                d="M201.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L224 338.7 54.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z"
                fill="currentColor"
              />
            </svg>
          </div>
        </div>
      </div>
      <div
        class="footer"
      >
        Answers between 63 and 79 will be considered correct.
      </div>
    </div>
  </div>
  <div
    class="section"
  >
    <div
      class="questionFieldContainer layoutHalf"
    >
      <div
        class="label"
      >
        <span>
          Points
        </span>
        <button
          class="iconTooltipButton"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-circle-info "
            data-icon="circle-info"
            data-prefix="fas"
            role="img"
            viewBox="0 0 512 512"
          >
            <path
              d="M256 512a256 256 0 1 0 0-512 256 256 0 1 0 0 512zM224 160a32 32 0 1 1 64 0 32 32 0 1 1 -64 0zm-8 64l48 0c13.3 0 24 10.7 24 24l0 88 8 0c13.3 0 24 10.7 24 24s-10.7 24-24 24l-80 0c-13.3 0-24-10.7-24-24s10.7-24 24-24l24 0 0-64-24 0c-13.3 0-24-10.7-24-24s10.7-24 24-24z"
              fill="currentColor"
            />
          </svg>
        </button>
      </div>
      <div
        class="content"
      >
        <div
          class="inputContainer"
        >
          <div
            class="selectInputContainer selectInputKindPrimary"
          >
            <select
              data-testid="test-points-select-select"
              id="points-select"
              name="points-select"
            >
              <option
                value="0"
              >
                Zero Points
              </option>
              <option
                value="1000"
              >
                Standard Points (1000)
              </option>
              <option
                value="2000"
              >
                Double Points (2000)
              </option>
            </select>
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-chevron-down selectIcon"
              color="black"
              data-icon="chevron-down"
              data-prefix="fas"
              role="img"
              viewBox="0 0 448 512"
            >
              <path
                d="M201.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L224 338.7 54.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z"
                fill="currentColor"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      class="questionFieldContainer layoutHalf"
    >
      <div
        class="label"
      >
        <span>
          Time Limit
        </span>
        <button
          class="iconTooltipButton"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-circle-info "
            data-icon="circle-info"
            data-prefix="fas"
            role="img"
            viewBox="0 0 512 512"
          >
            <path
              d="M256 512a256 256 0 1 0 0-512 256 256 0 1 0 0 512zM224 160a32 32 0 1 1 64 0 32 32 0 1 1 -64 0zm-8 64l48 0c13.3 0 24 10.7 24 24l0 88 8 0c13.3 0 24 10.7 24 24s-10.7 24-24 24l-80 0c-13.3 0-24-10.7-24-24s10.7-24 24-24l24 0 0-64-24 0c-13.3 0-24-10.7-24-24s10.7-24 24-24z"
              fill="currentColor"
            />
          </svg>
        </button>
      </div>
      <div
        class="content"
      >
        <div
          class="inputContainer"
        >
          <div
            class="selectInputContainer selectInputKindPrimary"
          >
            <select
              data-testid="test-duration-select-select"
              id="duration-select"
              name="duration-select"
            >
              <option
                value="5"
              >
                5 seconds
              </option>
              <option
                value="10"
              >
                10 seconds
              </option>
              <option
                value="20"
              >
                20 seconds
              </option>
              <option
                value="30"
              >
                30 seconds
              </option>
              <option
                value="45"
              >
                45 seconds
              </option>
              <option
                value="60"
              >
                1 minute
              </option>
              <option
                value="90"
              >
                1 minute 30 seconds
              </option>
              <option
                value="120"
              >
                2 minutes
              </option>
              <option
                value="180"
              >
                3 minutes
              </option>
              <option
                value="240"
              >
                4 minutes
              </option>
            </select>
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-chevron-down selectIcon"
              color="black"
              data-icon="chevron-down"
              data-prefix="fas"
              role="img"
              viewBox="0 0 448 512"
            >
              <path
                d="M201.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L224 338.7 54.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z"
                fill="currentColor"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`QuestionForm > renders a classic true or false question form 1`] = `
<div>
  <div
    class="section"
  >
    <div
      class="questionFieldContainer layoutFull"
    >
      <div
        class="label"
      >
        <span>
          Question
        </span>
      </div>
      <div
        class="content"
      >
        <div
          class="inputContainer"
        >
          <div
            class="textFieldInputContainer textFieldInputKindPrimary"
          >
            <input
              class="textfield"
              data-testid="test-question-text-textfield-textfield"
              id="question-text-textfield"
              maxlength="120"
              minlength="3"
              name="question-text-textfield"
              placeholder="Question"
              type="text"
              value="Rabbits can't vomit?"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="section"
  >
    <div
      class="questionFieldContainer layoutFull"
    >
      <div
        class="label"
      />
      <div
        class="content"
      >
        <div
          class="mediaQuestionField"
        >
          <div
            class="previewWrapper"
          >
            <div
              class="preview"
            >
              <div
                class="container"
              >
                <img
                  class="image"
                  src="https://assets.petco.com/petco/image/upload/f_auto,q_auto/rabbit-care-sheet"
                />
              </div>
            </div>
            <div
              class="actions"
            >
              <div
                class="buttonInputContainer buttonInputKindDestructive buttonInputSizeSmall"
              >
                <button
                  data-testid="test-delete-media-button-button"
                  id="delete-media-button"
                  name="delete-media-button"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-trash "
                    data-icon="trash"
                    data-prefix="fas"
                    role="img"
                    viewBox="0 0 448 512"
                  >
                    <path
                      d="M136.7 5.9L128 32 32 32C14.3 32 0 46.3 0 64S14.3 96 32 96l384 0c17.7 0 32-14.3 32-32s-14.3-32-32-32l-96 0-8.7-26.1C306.9-7.2 294.7-16 280.9-16L167.1-16c-13.8 0-26 8.8-30.4 21.9zM416 144L32 144 53.1 467.1C54.7 492.4 75.7 512 101 512L347 512c25.3 0 46.3-19.6 47.9-44.9L416 144z"
                      fill="currentColor"
                    />
                  </svg>
                  <span>
                    Delete
                  </span>
                </button>
              </div>
              <div
                class="buttonInputContainer buttonInputKindCallToAction buttonInputSizeSmall"
              >
                <button
                  data-testid="test-add-media-button-button"
                  id="add-media-button"
                  name="add-media-button"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-retweet "
                    data-icon="retweet"
                    data-prefix="fas"
                    role="img"
                    viewBox="0 0 576 512"
                  >
                    <path
                      d="M118.6 41.4c-12.5-12.5-32.8-12.5-45.3 0l-64 64c-9.2 9.2-11.9 22.9-6.9 34.9S19.1 160 32 160l32 0 0 224c0 53 43 96 96 96l128 0c17.7 0 32-14.3 32-32s-14.3-32-32-32l-128 0c-17.7 0-32-14.3-32-32l0-224 32 0c12.9 0 24.6-7.8 29.6-19.8s2.2-25.7-6.9-34.9l-64-64zM457.4 470.6c12.5 12.5 32.8 12.5 45.3 0l64-64c9.2-9.2 11.9-22.9 6.9-34.9S556.9 352 544 352l-32 0 0-224c0-53-43-96-96-96L288 32c-17.7 0-32 14.3-32 32s14.3 32 32 32l128 0c17.7 0 32 14.3 32 32l0 224-32 0c-12.9 0-24.6 7.8-29.6 19.8s-2.2 25.7 6.9 34.9l64 64z"
                      fill="currentColor"
                    />
                  </svg>
                  <span>
                    Replace
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="section"
  >
    <div
      class="questionFieldContainer layoutFull"
    >
      <div
        class="label"
      >
        <span>
          Options
        </span>
      </div>
      <div
        class="content optionsContainer"
      >
        <div
          class="optionsContainer"
        >
          <div
            class="option"
          >
            <div
              class="inputContainer"
            >
              <div
                class="textFieldInputContainer textFieldInputKindPrimary"
              >
                <input
                  class="textfield"
                  data-testid="test-true-false-option-0-textfield-textfield"
                  id="true-false-option-0-textfield"
                  name="true-false-option-0-textfield"
                  readonly=""
                  type="text"
                  value="True"
                />
                <label
                  class="checkboxLabel"
                  for="true-false-option-0-textfield-checkbox"
                >
                  <input
                    checked=""
                    class="checkbox"
                    id="true-false-option-0-textfield-checkbox"
                    type="checkbox"
                  />
                  <span
                    class="checkboxIcon"
                  >
                    <svg
                      aria-hidden="true"
                      class="svg-inline--fa fa-check "
                      data-icon="check"
                      data-prefix="fas"
                      role="img"
                      viewBox="0 0 448 512"
                    >
                      <path
                        d="M434.8 70.1c14.3 10.4 17.5 30.4 7.1 44.7l-256 352c-5.5 7.6-14 12.3-23.4 13.1s-18.5-2.7-25.1-9.3l-128-128c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l101.5 101.5 234-321.7c10.4-14.3 30.4-17.5 44.7-7.1z"
                        fill="currentColor"
                      />
                    </svg>
                  </span>
                </label>
              </div>
            </div>
          </div>
          <div
            class="option"
          >
            <div
              class="inputContainer"
            >
              <div
                class="textFieldInputContainer textFieldInputKindPrimary"
              >
                <input
                  class="textfield"
                  data-testid="test-true-false-option-1-textfield-textfield"
                  id="true-false-option-1-textfield"
                  name="true-false-option-1-textfield"
                  readonly=""
                  type="text"
                  value="False"
                />
                <label
                  class="checkboxLabel"
                  for="true-false-option-1-textfield-checkbox"
                >
                  <input
                    class="checkbox"
                    id="true-false-option-1-textfield-checkbox"
                    type="checkbox"
                  />
                </label>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="section"
  >
    <div
      class="questionFieldContainer layoutHalf"
    >
      <div
        class="label"
      >
        <span>
          Points
        </span>
        <button
          class="iconTooltipButton"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-circle-info "
            data-icon="circle-info"
            data-prefix="fas"
            role="img"
            viewBox="0 0 512 512"
          >
            <path
              d="M256 512a256 256 0 1 0 0-512 256 256 0 1 0 0 512zM224 160a32 32 0 1 1 64 0 32 32 0 1 1 -64 0zm-8 64l48 0c13.3 0 24 10.7 24 24l0 88 8 0c13.3 0 24 10.7 24 24s-10.7 24-24 24l-80 0c-13.3 0-24-10.7-24-24s10.7-24 24-24l24 0 0-64-24 0c-13.3 0-24-10.7-24-24s10.7-24 24-24z"
              fill="currentColor"
            />
          </svg>
        </button>
      </div>
      <div
        class="content"
      >
        <div
          class="inputContainer"
        >
          <div
            class="selectInputContainer selectInputKindPrimary"
          >
            <select
              data-testid="test-points-select-select"
              id="points-select"
              name="points-select"
            >
              <option
                value="0"
              >
                Zero Points
              </option>
              <option
                value="1000"
              >
                Standard Points (1000)
              </option>
              <option
                value="2000"
              >
                Double Points (2000)
              </option>
            </select>
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-chevron-down selectIcon"
              color="black"
              data-icon="chevron-down"
              data-prefix="fas"
              role="img"
              viewBox="0 0 448 512"
            >
              <path
                d="M201.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L224 338.7 54.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z"
                fill="currentColor"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      class="questionFieldContainer layoutHalf"
    >
      <div
        class="label"
      >
        <span>
          Time Limit
        </span>
        <button
          class="iconTooltipButton"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-circle-info "
            data-icon="circle-info"
            data-prefix="fas"
            role="img"
            viewBox="0 0 512 512"
          >
            <path
              d="M256 512a256 256 0 1 0 0-512 256 256 0 1 0 0 512zM224 160a32 32 0 1 1 64 0 32 32 0 1 1 -64 0zm-8 64l48 0c13.3 0 24 10.7 24 24l0 88 8 0c13.3 0 24 10.7 24 24s-10.7 24-24 24l-80 0c-13.3 0-24-10.7-24-24s10.7-24 24-24l24 0 0-64-24 0c-13.3 0-24-10.7-24-24s10.7-24 24-24z"
              fill="currentColor"
            />
          </svg>
        </button>
      </div>
      <div
        class="content"
      >
        <div
          class="inputContainer"
        >
          <div
            class="selectInputContainer selectInputKindPrimary"
          >
            <select
              data-testid="test-duration-select-select"
              id="duration-select"
              name="duration-select"
            >
              <option
                value="5"
              >
                5 seconds
              </option>
              <option
                value="10"
              >
                10 seconds
              </option>
              <option
                value="20"
              >
                20 seconds
              </option>
              <option
                value="30"
              >
                30 seconds
              </option>
              <option
                value="45"
              >
                45 seconds
              </option>
              <option
                value="60"
              >
                1 minute
              </option>
              <option
                value="90"
              >
                1 minute 30 seconds
              </option>
              <option
                value="120"
              >
                2 minutes
              </option>
              <option
                value="180"
              >
                3 minutes
              </option>
              <option
                value="240"
              >
                4 minutes
              </option>
            </select>
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-chevron-down selectIcon"
              color="black"
              data-icon="chevron-down"
              data-prefix="fas"
              role="img"
              viewBox="0 0 448 512"
            >
              <path
                d="M201.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L224 338.7 54.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z"
                fill="currentColor"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`QuestionForm > renders a classic type answer question form 1`] = `
<div>
  <div
    class="section"
  >
    <div
      class="questionFieldContainer layoutFull"
    >
      <div
        class="label"
      >
        <span>
          Question
        </span>
      </div>
      <div
        class="content"
      >
        <div
          class="inputContainer"
        >
          <div
            class="textFieldInputContainer textFieldInputKindPrimary"
          >
            <input
              class="textfield"
              data-testid="test-question-text-textfield-textfield"
              id="question-text-textfield"
              maxlength="120"
              minlength="3"
              name="question-text-textfield"
              placeholder="Question"
              type="text"
              value="Who painted the Mono Lisa?"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="section"
  >
    <div
      class="questionFieldContainer layoutFull"
    >
      <div
        class="label"
      />
      <div
        class="content"
      >
        <div
          class="mediaQuestionField"
        >
          <div
            class="previewWrapper"
          >
            <div
              class="preview"
            >
              <div
                class="container"
              >
                <img
                  class="image"
                  src="https://i.pinimg.com/originals/a1/4a/04/a14a0433d085057106b61a5ef63c7249.jpg"
                />
              </div>
            </div>
            <div
              class="actions"
            >
              <div
                class="buttonInputContainer buttonInputKindDestructive buttonInputSizeSmall"
              >
                <button
                  data-testid="test-delete-media-button-button"
                  id="delete-media-button"
                  name="delete-media-button"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-trash "
                    data-icon="trash"
                    data-prefix="fas"
                    role="img"
                    viewBox="0 0 448 512"
                  >
                    <path
                      d="M136.7 5.9L128 32 32 32C14.3 32 0 46.3 0 64S14.3 96 32 96l384 0c17.7 0 32-14.3 32-32s-14.3-32-32-32l-96 0-8.7-26.1C306.9-7.2 294.7-16 280.9-16L167.1-16c-13.8 0-26 8.8-30.4 21.9zM416 144L32 144 53.1 467.1C54.7 492.4 75.7 512 101 512L347 512c25.3 0 46.3-19.6 47.9-44.9L416 144z"
                      fill="currentColor"
                    />
                  </svg>
                  <span>
                    Delete
                  </span>
                </button>
              </div>
              <div
                class="buttonInputContainer buttonInputKindCallToAction buttonInputSizeSmall"
              >
                <button
                  data-testid="test-add-media-button-button"
                  id="add-media-button"
                  name="add-media-button"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-retweet "
                    data-icon="retweet"
                    data-prefix="fas"
                    role="img"
                    viewBox="0 0 576 512"
                  >
                    <path
                      d="M118.6 41.4c-12.5-12.5-32.8-12.5-45.3 0l-64 64c-9.2 9.2-11.9 22.9-6.9 34.9S19.1 160 32 160l32 0 0 224c0 53 43 96 96 96l128 0c17.7 0 32-14.3 32-32s-14.3-32-32-32l-128 0c-17.7 0-32-14.3-32-32l0-224 32 0c12.9 0 24.6-7.8 29.6-19.8s2.2-25.7-6.9-34.9l-64-64zM457.4 470.6c12.5 12.5 32.8 12.5 45.3 0l64-64c9.2-9.2 11.9-22.9 6.9-34.9S556.9 352 544 352l-32 0 0-224c0-53-43-96-96-96L288 32c-17.7 0-32 14.3-32 32s14.3 32 32 32l128 0c17.7 0 32 14.3 32 32l0 224-32 0c-12.9 0-24.6 7.8-29.6 19.8s-2.2 25.7 6.9 34.9l64 64z"
                      fill="currentColor"
                    />
                  </svg>
                  <span>
                    Replace
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="section"
  >
    <div
      class="questionFieldContainer layoutFull"
    >
      <div
        class="label"
      >
        <span>
          Options
        </span>
        <button
          class="iconTooltipButton"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-circle-info "
            data-icon="circle-info"
            data-prefix="fas"
            role="img"
            viewBox="0 0 512 512"
          >
            <path
              d="M256 512a256 256 0 1 0 0-512 256 256 0 1 0 0 512zM224 160a32 32 0 1 1 64 0 32 32 0 1 1 -64 0zm-8 64l48 0c13.3 0 24 10.7 24 24l0 88 8 0c13.3 0 24 10.7 24 24s-10.7 24-24 24l-80 0c-13.3 0-24-10.7-24-24s10.7-24 24-24l24 0 0-64-24 0c-13.3 0-24-10.7-24-24s10.7-24 24-24z"
              fill="currentColor"
            />
          </svg>
        </button>
      </div>
      <div
        class="content optionsContainer"
      >
        <div
          class="optionsContainer"
        >
          <div
            class="option"
          >
            <div
              class="inputContainer"
            >
              <div
                class="textFieldInputContainer textFieldInputKindPrimary"
              >
                <input
                  class="textfield"
                  data-testid="test-type-answer-option-0-textfield-textfield"
                  id="type-answer-option-0-textfield"
                  name="type-answer-option-0-textfield"
                  placeholder="Option 1"
                  type="text"
                  value="leonardo da vinci"
                />
              </div>
            </div>
          </div>
          <div
            class="option"
          >
            <div
              class="inputContainer"
            >
              <div
                class="textFieldInputContainer textFieldInputKindPrimary"
              >
                <input
                  class="textfield"
                  data-testid="test-type-answer-option-1-textfield-textfield"
                  id="type-answer-option-1-textfield"
                  name="type-answer-option-1-textfield"
                  placeholder="Option 2"
                  type="text"
                  value="leonardo"
                />
              </div>
            </div>
          </div>
          <div
            class="option"
          >
            <div
              class="inputContainer"
            >
              <div
                class="textFieldInputContainer textFieldInputKindPrimary"
              >
                <input
                  class="textfield"
                  data-testid="test-type-answer-option-2-textfield-textfield"
                  id="type-answer-option-2-textfield"
                  name="type-answer-option-2-textfield"
                  placeholder="Option 3"
                  type="text"
                  value="da vinci"
                />
              </div>
            </div>
          </div>
          <div
            class="option"
          >
            <div
              class="inputContainer"
            >
              <div
                class="textFieldInputContainer textFieldInputKindPrimary"
              >
                <input
                  class="textfield"
                  data-testid="test-type-answer-option-3-textfield-textfield"
                  id="type-answer-option-3-textfield"
                  name="type-answer-option-3-textfield"
                  placeholder="Option 4"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="section"
  >
    <div
      class="questionFieldContainer layoutHalf"
    >
      <div
        class="label"
      >
        <span>
          Points
        </span>
        <button
          class="iconTooltipButton"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-circle-info "
            data-icon="circle-info"
            data-prefix="fas"
            role="img"
            viewBox="0 0 512 512"
          >
            <path
              d="M256 512a256 256 0 1 0 0-512 256 256 0 1 0 0 512zM224 160a32 32 0 1 1 64 0 32 32 0 1 1 -64 0zm-8 64l48 0c13.3 0 24 10.7 24 24l0 88 8 0c13.3 0 24 10.7 24 24s-10.7 24-24 24l-80 0c-13.3 0-24-10.7-24-24s10.7-24 24-24l24 0 0-64-24 0c-13.3 0-24-10.7-24-24s10.7-24 24-24z"
              fill="currentColor"
            />
          </svg>
        </button>
      </div>
      <div
        class="content"
      >
        <div
          class="inputContainer"
        >
          <div
            class="selectInputContainer selectInputKindPrimary"
          >
            <select
              data-testid="test-points-select-select"
              id="points-select"
              name="points-select"
            >
              <option
                value="0"
              >
                Zero Points
              </option>
              <option
                value="1000"
              >
                Standard Points (1000)
              </option>
              <option
                value="2000"
              >
                Double Points (2000)
              </option>
            </select>
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-chevron-down selectIcon"
              color="black"
              data-icon="chevron-down"
              data-prefix="fas"
              role="img"
              viewBox="0 0 448 512"
            >
              <path
                d="M201.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L224 338.7 54.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z"
                fill="currentColor"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      class="questionFieldContainer layoutHalf"
    >
      <div
        class="label"
      >
        <span>
          Time Limit
        </span>
        <button
          class="iconTooltipButton"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-circle-info "
            data-icon="circle-info"
            data-prefix="fas"
            role="img"
            viewBox="0 0 512 512"
          >
            <path
              d="M256 512a256 256 0 1 0 0-512 256 256 0 1 0 0 512zM224 160a32 32 0 1 1 64 0 32 32 0 1 1 -64 0zm-8 64l48 0c13.3 0 24 10.7 24 24l0 88 8 0c13.3 0 24 10.7 24 24s-10.7 24-24 24l-80 0c-13.3 0-24-10.7-24-24s10.7-24 24-24l24 0 0-64-24 0c-13.3 0-24-10.7-24-24s10.7-24 24-24z"
              fill="currentColor"
            />
          </svg>
        </button>
      </div>
      <div
        class="content"
      >
        <div
          class="inputContainer"
        >
          <div
            class="selectInputContainer selectInputKindPrimary"
          >
            <select
              data-testid="test-duration-select-select"
              id="duration-select"
              name="duration-select"
            >
              <option
                value="5"
              >
                5 seconds
              </option>
              <option
                value="10"
              >
                10 seconds
              </option>
              <option
                value="20"
              >
                20 seconds
              </option>
              <option
                value="30"
              >
                30 seconds
              </option>
              <option
                value="45"
              >
                45 seconds
              </option>
              <option
                value="60"
              >
                1 minute
              </option>
              <option
                value="90"
              >
                1 minute 30 seconds
              </option>
              <option
                value="120"
              >
                2 minutes
              </option>
              <option
                value="180"
              >
                3 minutes
              </option>
              <option
                value="240"
              >
                4 minutes
              </option>
            </select>
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-chevron-down selectIcon"
              color="black"
              data-icon="chevron-down"
              data-prefix="fas"
              role="img"
              viewBox="0 0 448 512"
            >
              <path
                d="M201.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L224 338.7 54.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z"
                fill="currentColor"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`QuestionForm > renders a zero to one hundred range question form 1`] = `
<div>
  <div
    class="section"
  >
    <div
      class="questionFieldContainer layoutFull"
    >
      <div
        class="label"
      >
        <span>
          Question
        </span>
      </div>
      <div
        class="content"
      >
        <div
          class="inputContainer"
        >
          <div
            class="textFieldInputContainer textFieldInputKindPrimary"
          >
            <input
              class="textfield"
              data-testid="test-question-text-textfield-textfield"
              id="question-text-textfield"
              maxlength="120"
              minlength="3"
              name="question-text-textfield"
              placeholder="Question"
              type="text"
              value="What percentage of the earth's surface is covered by water?"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="section"
  >
    <div
      class="questionFieldContainer layoutFull"
    >
      <div
        class="label"
      />
      <div
        class="content"
      >
        <div
          class="mediaQuestionField"
        >
          <div
            class="previewWrapper"
          >
            <div
              class="preview"
            >
              <div
                class="container"
              >
                <img
                  class="image"
                  src="https://editalconcursosbrasil.com.br/wp-content/uploads/2022/12/planeta-terra-scaled.jpg"
                />
              </div>
            </div>
            <div
              class="actions"
            >
              <div
                class="buttonInputContainer buttonInputKindDestructive buttonInputSizeSmall"
              >
                <button
                  data-testid="test-delete-media-button-button"
                  id="delete-media-button"
                  name="delete-media-button"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-trash "
                    data-icon="trash"
                    data-prefix="fas"
                    role="img"
                    viewBox="0 0 448 512"
                  >
                    <path
                      d="M136.7 5.9L128 32 32 32C14.3 32 0 46.3 0 64S14.3 96 32 96l384 0c17.7 0 32-14.3 32-32s-14.3-32-32-32l-96 0-8.7-26.1C306.9-7.2 294.7-16 280.9-16L167.1-16c-13.8 0-26 8.8-30.4 21.9zM416 144L32 144 53.1 467.1C54.7 492.4 75.7 512 101 512L347 512c25.3 0 46.3-19.6 47.9-44.9L416 144z"
                      fill="currentColor"
                    />
                  </svg>
                  <span>
                    Delete
                  </span>
                </button>
              </div>
              <div
                class="buttonInputContainer buttonInputKindCallToAction buttonInputSizeSmall"
              >
                <button
                  data-testid="test-add-media-button-button"
                  id="add-media-button"
                  name="add-media-button"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-retweet "
                    data-icon="retweet"
                    data-prefix="fas"
                    role="img"
                    viewBox="0 0 576 512"
                  >
                    <path
                      d="M118.6 41.4c-12.5-12.5-32.8-12.5-45.3 0l-64 64c-9.2 9.2-11.9 22.9-6.9 34.9S19.1 160 32 160l32 0 0 224c0 53 43 96 96 96l128 0c17.7 0 32-14.3 32-32s-14.3-32-32-32l-128 0c-17.7 0-32-14.3-32-32l0-224 32 0c12.9 0 24.6-7.8 29.6-19.8s2.2-25.7-6.9-34.9l-64-64zM457.4 470.6c12.5 12.5 32.8 12.5 45.3 0l64-64c9.2-9.2 11.9-22.9 6.9-34.9S556.9 352 544 352l-32 0 0-224c0-53-43-96-96-96L288 32c-17.7 0-32 14.3-32 32s14.3 32 32 32l128 0c17.7 0 32 14.3 32 32l0 224-32 0c-12.9 0-24.6 7.8-29.6 19.8s-2.2 25.7 6.9 34.9l64 64z"
                      fill="currentColor"
                    />
                  </svg>
                  <span>
                    Replace
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="section"
  >
    <div
      class="questionFieldContainer layoutHalf"
    >
      <div
        class="label"
      >
        <span>
          Correct
        </span>
        <button
          class="iconTooltipButton"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-circle-info "
            data-icon="circle-info"
            data-prefix="fas"
            role="img"
            viewBox="0 0 512 512"
          >
            <path
              d="M256 512a256 256 0 1 0 0-512 256 256 0 1 0 0 512zM224 160a32 32 0 1 1 64 0 32 32 0 1 1 -64 0zm-8 64l48 0c13.3 0 24 10.7 24 24l0 88 8 0c13.3 0 24 10.7 24 24s-10.7 24-24 24l-80 0c-13.3 0-24-10.7-24-24s10.7-24 24-24l24 0 0-64-24 0c-13.3 0-24-10.7-24-24s10.7-24 24-24z"
              fill="currentColor"
            />
          </svg>
        </button>
      </div>
      <div
        class="content"
      >
        <div
          class="inputContainer"
        >
          <div
            class="textFieldInputContainer textFieldInputKindPrimary"
          >
            <input
              class="textfield"
              data-testid="test-range-correct-textfield-textfield"
              id="range-correct-textfield"
              max="100"
              min="0"
              name="range-correct-textfield"
              placeholder=""
              type="number"
              value="71"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="section"
  >
    <div
      class="questionFieldContainer layoutHalf"
    >
      <div
        class="label"
      >
        <span>
          Time Limit
        </span>
        <button
          class="iconTooltipButton"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-circle-info "
            data-icon="circle-info"
            data-prefix="fas"
            role="img"
            viewBox="0 0 512 512"
          >
            <path
              d="M256 512a256 256 0 1 0 0-512 256 256 0 1 0 0 512zM224 160a32 32 0 1 1 64 0 32 32 0 1 1 -64 0zm-8 64l48 0c13.3 0 24 10.7 24 24l0 88 8 0c13.3 0 24 10.7 24 24s-10.7 24-24 24l-80 0c-13.3 0-24-10.7-24-24s10.7-24 24-24l24 0 0-64-24 0c-13.3 0-24-10.7-24-24s10.7-24 24-24z"
              fill="currentColor"
            />
          </svg>
        </button>
      </div>
      <div
        class="content"
      >
        <div
          class="inputContainer"
        >
          <div
            class="selectInputContainer selectInputKindPrimary"
          >
            <select
              data-testid="test-duration-select-select"
              id="duration-select"
              name="duration-select"
            >
              <option
                value="5"
              >
                5 seconds
              </option>
              <option
                value="10"
              >
                10 seconds
              </option>
              <option
                value="20"
              >
                20 seconds
              </option>
              <option
                value="30"
              >
                30 seconds
              </option>
              <option
                value="45"
              >
                45 seconds
              </option>
              <option
                value="60"
              >
                1 minute
              </option>
              <option
                value="90"
              >
                1 minute 30 seconds
              </option>
              <option
                value="120"
              >
                2 minutes
              </option>
              <option
                value="180"
              >
                3 minutes
              </option>
              <option
                value="240"
              >
                4 minutes
              </option>
            </select>
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-chevron-down selectIcon"
              color="black"
              data-icon="chevron-down"
              data-prefix="fas"
              role="img"
              viewBox="0 0 448 512"
            >
              <path
                d="M201.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L224 338.7 54.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z"
                fill="currentColor"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
